<resources>
    <string name="app_name">A-Teams</string>

    <string name="no_data_label">Unknown</string>

    <!--Posts card-->
    <string name="posts_card_label">Posts</string>
    <string name="posts_answer_label">Answer</string>
    <string name="posts_card_content">Show post №</string>

    <!--Comments card-->
    <string name="comments_card_label">Comments</string>
    <string name="comments_answer_label">Answer</string>
    <string name="comments_card_content">Show comment №</string>

    <!--Users card-->
    <string name="users_card_label">Users</string>
    <string name="users_label">Users data: </string>

    <!--Photos card-->
    <string name="photo_card_label">Photos</string>

    <!--Todos card-->
    <string name="todos_card_label">Todos</string>

    <!--Tab labels-->
    <string name="cards_tab_label">Cards</string>
    <string name="contacts_tab_label">Contacts</string>
</resources>
