<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/post_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/postProgressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/posts_card_label"
            android:textColor="@color/colorBlack"
            android:paddingBottom="5dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/edit_post_number"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:inputType="number"
                android:maxLength="3"
                android:hint="@string/posts_card_content"
                android:focusedByDefault="false"/>

            <Button
                android:id="@+id/getPostButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Submit"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <TextView
            android:id="@+id/post_number_error"
            android:text="№ 1-100"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="95dp"
            android:textColor="@color/colorError"/>

        <TextView
            android:id="@+id/post_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_label"/>


    </LinearLayout>

</android.support.v7.widget.CardView>
